--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,12 +1,3 @@
-0.11:
+0.5:
 
-#4 ServerRuntimeFactory: 'createSchema' - a config flag to enable schema auto-creation
-
-0.10:
-
-#3 Adding Shutdown hook
-
-0.9:
-
-#1 Support for named Cayenne stacks
-#2 Upgrade to Cayenne 4.0.M3.fb19854
+Initial framework with basic functionality
